app/styles/main.scss
// bower:scss
// endbower
$homescreen-bgcolor: #e9e9e9;
$homescreen-bg-image: none; //url('/images/background_image.jpg');

$group-item-bgcolor: #FF9800;
$group-item-color: white;
$message-item-bgcolor: white;
$message-item-color: black;
$lesson-item-bgcolor: #03A9F4;
$lesson-item-color: white;
$challenge-item-bgcolor: #FF9800;
$challenge-item-color: white;

.browsehappy {
  margin: 0.2em 0;
  background: #ccc;
  color: #000;
  padding: 0.2em 0;
}

body {
  padding: 0;
  font-family: Roboto, Arial;
}

md-content {
    background: none;
}

md-content.main-content {
    display: flex;
    height: calc(100% - 64px);
    background-color: $homescreen-bgcolor;
    background-image: $homescreen-bg-image;
    background-size: cover;
    background-position: top left;
}

md-toolbar.topbar {
  background-color: white;
  box-shadow: 0 2px 5px rgba(0,0,0,0.26);
}

.md-toolbar-tools img.logo {
    height: 60px;
    width: 72px;
}

.md-toolbar-tools .align-right {
    position: absolute;
    right: 0px;
    top: 0px;
    padding-top: 12px;
}

#logo-home-bn {
    width: 72px;
}

.unread-msg-count {
  display: inline-block;
  background-color: #b20000;
  color: #fff;
  font-weight: bold;
  padding: 0 3px;
  font-size: 14px;
  line-height: 19px;
}

.help-question-block {
    background-color: lightblue;
}

.help-question-block md-input-container{
    width: 100%;
}

.help-question-block textarea {
    width: 100%;
}

#version_badge {
    color: white;
    cursor: help;
    font-family: Roboto, Arial;
    vertical-align: middle;
    float: right;
    margin-left: 10px;
    padding: 5px;
    font-weight: bold;
    font-size: small;
    border-radius: .25em;
    background-color: #03A9F4;
    text-transform: uppercase;
}

.mail-list,
.release-list,
.teacher-dashboard {
    padding: 50px 20px 0 20px;
}

.mail-list md-card-content {
    padding: 10px;
    padding-bottom: 30px;
}

.teacher-dashboard md-card-content {
    padding: 10px;
    margin-bottom: 20px;
    margin-top: 20px;
}


.mail-list .message md-toolbar,
.mail-list .message .md-toolbar-tools {
  height: 50px;
  min-height: 50px;
  max-height: 50px;
}

.mail-list md-card.message {
  margin-bottom: 20px;
}

.mail-list md-card.message md-card-content {
  position: relative;
}

.mail-list div.mail-contents {
  padding: 5px;
}

.mail-list div.mail-contents p:first-child {
  margin-top: 0;
}

.mail-list div.mail-contents p:last-child {
  margin-bottom: 0;
}

.mail-list div.mail-datetime {
  position: absolute;
  bottom: 0px;
  right: 10px;
  padding-top: 10px;
  font-size: 12px;
  color: #333;
  padding-bottom: 10px;
}

.mail-list .message.empty-inbox {
  text-align: center;
}

.release-list md-card{
  margin-bottom: 20px;;
}

.release-list md-card md-toolbar{
  background: gray;
}

.release-list md-card.release-delivered md-toolbar{
  background: green;
}

.release-list md-card md-toolbar .release-date{
  font-size: 16px;
  padding-top: 24px;
  padding-right: 10px;
}

.group_selector,
.homescreen {
    padding: 50px 20px 0 20px;
}

.group_selector .md-subhead,
.homescreen .md-subhead {
    color: inherit!important;
}

.group_selector md-card.group-card {
    cursor: pointer;
    background: $group-item-bgcolor;
    color: $group-item-color;
}

.group_selector md-card,
.homescreen md-card {
    min-height: 112px;
}

.homescreen .message-item {
    cursor: pointer;
    background: $message-item-bgcolor;
    color: $message-item-color;
}

.homescreen .message-item .icon {
    fill: $message-item-color;
}

.homescreen .message-item:hover {
    background: lighten($message-item-bgcolor, 20%);
}

.homescreen .lesson-item {
    cursor: pointer;
    background: $lesson-item-bgcolor;
    color: $lesson-item-color;
}

.homescreen .lesson-item:hover {
    background: lighten($lesson-item-bgcolor, 20%);
}

.homescreen .lesson-item .icon{
    fill: $lesson-item-color;
    stroke: $lesson-item-color;
}

.homescreen .challenge-item {
    cursor: pointer;
    background: $challenge-item-bgcolor;
    color: $challenge-item-color;
}

.homescreen .challenge-item:hover {
    background: lighten($challenge-item-bgcolor, 20%);
}

.homescreen .challenge-item .icon {
    fill: $challenge-item-color;
    stroke: $challenge-item-color;
}

.header,
.footer {
  padding-left: 15px;
  padding-right: 15px;
}

/* Custom page header */
.header {
  border-bottom: 1px solid #e5e5e5;
  margin-bottom: 10px;

  /* Make the masthead heading the same height as the navigation */
  h3 {
    margin-top: 0;
    margin-bottom: 0;
    line-height: 40px;
    padding-bottom: 19px;
  }
}

/* Custom page footer */
.footer {
  padding-top: 19px;
  color: #777;
  border-top: 1px solid #e5e5e5;
}

.container-narrow > hr {
  margin: 30px 0;
}

/* Responsive: Portrait tablets and up */
@media screen and (min-width: 768px) {
  .container {
    max-width: 730px;
  }

  /* Remove the padding we set earlier */
  .header,
  .footer {
    padding-left: 0;
    padding-right: 0;
  }
  /* Space out the masthead */
  .header {
    margin-bottom: 30px;
  }
}

.hide {
  display: none;
}

#browser-container {
  display: flex;
  height: calc(100% - 64px);
}

.loading-toolbar {
  padding-right: 16px;
}

